# shallownet-pytorch

./: Makefile  README.md  app.py  download_dataset.sh  pyproject.toml
shallownet_pytorch/: dataset.py  paths.py
shallownet_pytorch/models/: shallownet.py
