[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shallownet_pytorch"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jose Gomes Lopes Filho" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["shallownet_pytorch"]
force_sort_within_sections = true


